打包地址处理为函数

--- a/etherscan/final_results_pnl_address.ipynb
+++ b/etherscan/final_results_pnl_address.ipynb
@@ -2,100 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\ndata_process.ipynb和data_fetch.ipynb同样功能，但是通过封装函数实现了给日期地址等参数就可以返回数据，更加简洁\\n添加了pnl的计算，但是对于某些交易判断还是有问题，导致结果计算不完全正确\\n'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "from tabulate import tabulate\n",
-    "from fetch_process_function import fetch_and_save_erc20_transfers, process_transactions\n",
-    "'''\n",
-    "data_process.ipynb和data_fetch.ipynb同样功能，但是通过封装函数实现了给日期地址等参数就可以返回数据，更加简洁\n",
-    "添加了pnl的计算，但是对于某些交易判断还是有问题，导致结果计算不完全正确\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_pnl(btc_record_df: pd.DataFrame) -> pd.DataFrame:\n",
-    "    \"\"\"\n",
-    "    Calculate PnL for BTC transactions based on BTC_record_df.\n",
-    "\n",
-    "    :param btc_record_df: DataFrame containing BTC transaction records.\n",
-    "    :return: DataFrame with calculated PnL and summary of Realised and Unrealised PnL.\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    # Define current price as the price of the last row\n",
-    "    current_price = btc_record_df.iloc[-1]['average_price']\n",
-    "    \n",
-    "    results = []\n",
-    "    total_pnl = 0\n",
-    "\n",
-    "    for _, row in btc_record_df.iterrows():\n",
-    "        transaction_type = row['transaction_type']\n",
-    "        amount = row['other_token_volume']\n",
-    "        price = row['average_price']\n",
-    "\n",
-    "        # Calculate PnL for each row based on the difference from the current price\n",
-    "        pnl = (current_price - price) * amount\n",
-    "        \n",
-    "        # For SELL transactions, PnL is negative because it's reducing the position\n",
-    "        if transaction_type == \"SELL\":\n",
-    "            pnl *= -1\n",
-    "\n",
-    "        # Ignore the last row (current price reference)\n",
-    "        if row.name == btc_record_df.index[-1]:\n",
-    "            pnl = 0\n",
-    "\n",
-    "        total_pnl += pnl\n",
-    "\n",
-    "        # Append the result for this transaction\n",
-    "        results.append({\n",
-    "            \"Date\": row['dateTime'],\n",
-    "            \"timeStamp\": row['timeStamp'],\n",
-    "            \"Type\": transaction_type,\n",
-    "            \"amount\": amount,\n",
-    "            \"price\": price,\n",
-    "            \"pnl\": pnl\n",
-    "        })\n",
-    "\n",
-    "    # Convert results to a DataFrame\n",
-    "    pnl_df = pd.DataFrame(results)\n",
-    "\n",
-    "    return pnl_df\n"
+    "import pandas as pd\n",
+    "from tabulate import tabulate\n",
+    "from fetch_process_function import fetch_and_save_erc20_transfers, process_transactions, calculate_pnl, process_and_save_address\n",
+    "'''\n",
+    "data_process.ipynb和data_fetch.ipynb同样功能，但是通过封装函数实现了给日期地址等参数就可以返回数据，更加简洁\n",
+    "添加了pnl的计算，我们这里只计算第一种交易的pnl，其余的暂时忽略不计。\n",
+    "最后对于address也进行一个处理\n",
+    "'''\n",
+    "ADDRESS = \"0x5be9a4959308A0D0c7bC0870E319314d8D957dBB\"\n",
+    "START_DATE = \"2024-12-06 08:00\" # Singapore Time，the function will convert it to UTC\n",
+    "END_DATE = \"2024-12-12 08:00\"\n",
+    "OUTPUT_FILE = \"C:/Users/YuweiCao/Documents/GitHub/Project/Project/etherscan/result\"\n",
+    "API_KEY = \"VQAIR728IM4Z8RZKPYBR4ESM5I3WBZK2C1\"\n",
+    "BASE_TOKENS = {\"USDT\", \"USDC\", \"USDE\"}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-01-07 11:28:34,392 - INFO - Start block: 21339732, End block: 21382703\n",
-      "2025-01-07 11:28:34,393 - INFO - Fetching ERC20 transfers from block 21339732 to 21382703...\n",
-      "2025-01-07 11:28:37,118 - INFO - Page 1: Retrieved 119 transactions.\n",
-      "2025-01-07 11:28:38,148 - WARNING - API request failed on page 2: Request failed: No transactions found\n",
-      "2025-01-07 11:28:38,150 - INFO - Final dataset contains 119 unique transactions.\n",
-      "2025-01-07 11:28:38,158 - INFO - Data successfully saved to C:/Users/YuweiCao/Documents/GitHub/Project/Project/etherscan/result\\erc20_transfers.csv\n",
-      "2025-01-07 11:28:38,158 - INFO - Transfers saved to C:/Users/YuweiCao/Documents/GitHub/Project/Project/etherscan/result\n"
+      "2025-01-08 17:52:46,031 - INFO - Start block: 21339732, End block: 21382703\n",
+      "2025-01-08 17:52:46,031 - INFO - Fetching ERC20 transfers from block 21339732 to 21382703...\n",
+      "2025-01-08 17:52:47,135 - INFO - Page 1: Retrieved 119 transactions.\n",
+      "2025-01-08 17:52:48,009 - WARNING - API request failed on page 2: Request failed: No transactions found\n",
+      "2025-01-08 17:52:48,011 - INFO - Final dataset contains 119 unique transactions.\n",
+      "2025-01-08 17:52:48,014 - INFO - Data successfully saved to C:/Users/YuweiCao/Documents/GitHub/Project/Project/etherscan/result\\erc20_transfers.csv\n",
+      "2025-01-08 17:52:48,015 - INFO - Transfers saved to C:/Users/YuweiCao/Documents/GitHub/Project/Project/etherscan/result\n"
      ]
     },
     {
@@ -105,14 +47,6 @@
       "Formatted Transactions: part 1\n",
       "Formatted Transactions: part 2\n",
       "Formatted Transactions: final part\n",
-      "WLFI: 2 records\n",
-      "+---------------------+-------------+--------+---------------+---------+---------+\n",
-      "| Date                |   timeStamp | Type   |        amount |   price |     pnl |\n",
-      "+=====================+=============+========+===============+=========+=========+\n",
-      "| 2024-10-11 00:57:35 |  1728608255 | 'BUY'  | 2249999999.00 |    0.00 | 1795.30 |\n",
-      "+---------------------+-------------+--------+---------------+---------+---------+\n",
-      "| 2024-11-25 16:13:11 |  1732551191 | 'SELL' | 1000000000.00 |    0.00 |    0.00 |\n",
-      "+---------------------+-------------+--------+---------------+---------+---------+\n",
       "cbBTC: 38 records\n",
       "+---------------------+-------------+--------+----------+----------+--------+\n",
       "| Date                |   timeStamp | Type   |   amount |    price |    pnl |\n",
@@ -193,43 +127,25 @@
       "+---------------------+-------------+--------+----------+----------+--------+\n",
       "| 2024-11-29 19:17:35 |  1732907855 | BUY    |    24.04 | 97189.54 |   0.00 |\n",
       "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "WETH: 3 records\n",
-      "+---------------------+-------------+--------+----------+-------------+-------------+\n",
-      "| Date                |   timeStamp | Type   |   amount |       price |         pnl |\n",
-      "+=====================+=============+========+==========+=============+=============+\n",
-      "| 2024-12-01 23:44:23 |  1733096663 | 'BUY'  |     0.02 | 97499017.60 | -1759783.58 |\n",
-      "+---------------------+-------------+--------+----------+-------------+-------------+\n",
-      "| 2024-12-06 20:22:35 |  1733516555 | BUY    |   612.25 |     4083.36 |     -492.25 |\n",
-      "+---------------------+-------------+--------+----------+-------------+-------------+\n",
-      "| 2024-12-06 20:22:59 |  1733516579 | BUY    |   612.35 |     4082.56 |        0.00 |\n",
-      "+---------------------+-------------+--------+----------+-------------+-------------+\n",
-      "OPTIMUS: 1 records\n",
-      "+---------------------+-------------+--------+----------+---------+-------+\n",
-      "| Date                |   timeStamp | Type   |   amount |   price |   pnl |\n",
-      "+=====================+=============+========+==========+=========+=======+\n",
-      "| 2024-12-11 18:13:11 |  1733940791 | 'BUY'  | 10000.00 |  218.75 |     0 |\n",
-      "+---------------------+-------------+--------+----------+---------+-------+\n",
+      "WETH: 2 records\n",
+      "+---------------------+-------------+--------+----------+---------+---------+\n",
+      "| Date                |   timeStamp | Type   |   amount |   price |     pnl |\n",
+      "+=====================+=============+========+==========+=========+=========+\n",
+      "| 2024-12-06 20:22:35 |  1733516555 | BUY    |   612.25 | 4083.36 | -492.25 |\n",
+      "+---------------------+-------------+--------+----------+---------+---------+\n",
+      "| 2024-12-06 20:22:59 |  1733516579 | BUY    |   612.35 | 4082.56 |    0.00 |\n",
+      "+---------------------+-------------+--------+----------+---------+---------+\n",
       "+---------+-------------+\n",
       "| token   |   total_pnl |\n",
       "+=========+=============+\n",
-      "| WLFI    |     1795.30 |\n",
-      "+---------+-------------+\n",
       "| cbBTC   |      843.26 |\n",
       "+---------+-------------+\n",
-      "| WETH    | -1760275.83 |\n",
-      "+---------+-------------+\n",
-      "| OPTIMUS |        0.00 |\n",
+      "| WETH    |     -492.25 |\n",
       "+---------+-------------+\n"
      ]
     }
    ],
    "source": [
-    "ADDRESS = \"0x5be9a4959308A0D0c7bC0870E319314d8D957dBB\"\n",
-    "START_DATE = \"2024-12-06 08:00\" # Singapore Time，the function will convert it to UTC\n",
-    "END_DATE = \"2024-12-12 08:00\"\n",
-    "OUTPUT_FILE = \"C:/Users/YuweiCao/Documents/GitHub/Project/Project/etherscan/result\"\n",
-    "API_KEY = \"VQAIR728IM4Z8RZKPYBR4ESM5I3WBZK2C1\"\n",
-    "BASE_TOKENS = {\"USDT\", \"USDC\", \"USDE\"}\n",
     "transfers_df = fetch_and_save_erc20_transfers(\n",
     "        address=ADDRESS,\n",
     "        start_date=START_DATE,\n",
@@ -239,14 +155,14 @@
     "    )\n",
     "transfers_df = pd.read_csv(OUTPUT_FILE + \"/all_erc20_transfers.csv\")\n",
     "record_df_1, record_df_2, record_df_3 = process_transactions(transfers_df, OUTPUT_FILE, ADDRESS, BASE_TOKENS)\n",
-    "# print(tabulate(summary, headers='keys', tablefmt='grid', showindex=False, floatfmt=\".2f\"))\n",
-    "unique_tokens_count = record_df_2[\"token_symbol\"].nunique()\n",
+    "# 这里我为了显示简介把process_transactions中print结果的注释掉了 如果需要可以取消注释\n",
     "\n",
-    "unique_tokens = record_df_2[\"token_symbol\"].unique()\n",
+    "unique_tokens_count = record_df_1[\"token_symbol\"].nunique()\n",
+    "unique_tokens = record_df_1[\"token_symbol\"].unique()\n",
     "results = []\n",
     "\n",
     "for token in unique_tokens:\n",
-    "    token_df = record_df_2[record_df_2[\"formatted_record\"].str.contains(fr\"\\b{token}\\b\", regex=True)]\n",
+    "    token_df = record_df_1[record_df_1[\"formatted_record\"].str.contains(fr\"\\b{token}\\b\", regex=True)]\n",
     "    print(f\"{token}: {len(token_df)} records\")\n",
     "\n",
     "    pnl_df = calculate_pnl(token_df)\n",
@@ -262,9 +178,75 @@
     "# BTC_record_df = record_df_1[record_df_1[\"formatted_record\"].str.contains(r\"\\bcbBTC\\b\", regex=True)]\n",
     "# # print(BTC_record_df['formatted_record'])\n",
     "# pnl_df = calculate_pnl(BTC_record_df)\n",
-    "# print(f\"Total PnL: {pnl_df['pnl'].sum()}\")\n",
+    "# print(f\"Total PnL: {pnl_df['pnl'].sum()}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 37/37 [00:31<00:00,  1.18it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data has been save to address_counts_with_name_tags.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "TOP_ACCOUNTS_DF = pd.read_csv(OUTPUT_FILE + \"/top_accounts.csv\")\n",
+    "transfers_df = pd.read_csv(OUTPUT_FILE + \"/all_erc20_transfers.csv\")\n",
+    "output_file = \"address_counts_with_name_tags.csv\"\n",
     "\n",
-    "\n"
+    "process_and_save_address(transfers_df, TOP_ACCOUNTS_DF, output_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'address_counts' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m address_threshold \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m\n\u001b[1;32m----> 2\u001b[0m important_addresses \u001b[38;5;241m=\u001b[39m address_counts[address_counts[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtotal_count\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m>\u001b[39m address_threshold]\n\u001b[0;32m      3\u001b[0m important_addresses \u001b[38;5;241m=\u001b[39m important_addresses\u001b[38;5;241m.\u001b[39msort_values(by\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtotal_count\u001b[39m\u001b[38;5;124m\"\u001b[39m, ascending\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m      4\u001b[0m important_addresses \u001b[38;5;241m=\u001b[39m important_addresses[important_addresses[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maddress\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m!=\u001b[39m ADDRESS\u001b[38;5;241m.\u001b[39mlower()]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'address_counts' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "transfers_df = \n",
+    "address_threshold = 10\n",
+    "important_addresses = address_counts[address_counts[\"total_count\"] > address_threshold]\n",
+    "important_addresses = important_addresses.sort_values(by=\"total_count\", ascending=False)\n",
+    "important_addresses = important_addresses[important_addresses[\"address\"] != ADDRESS.lower()]\n",
+    "important_addresses[\"name\"] = important_addresses[\"address\"].apply(get_public_name_tag)\n",
+    "\n",
+    "print(important_addresses[[\"address\", \"name\"]])\n",
+    "\n",
+    "# 测试代码   \n",
+    "address = \"0x119ca458c5f91d3815e5f8a29633d709569b4eb3\"\n",
+    "name_tag = get_public_name_tag(address)\n",
+    "print(f\"Public Name Tag for {address}: {name_tag}\")    "
    ]
   }
  ],
