--- a/etherscan/final_results_pnl_address.ipynb
+++ b/etherscan/final_results_pnl_address.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
     "import pandas as pd\n",
     "from tabulate import tabulate\n",
     "from fetch_process_function import fetch_and_save_erc20_transfers, process_transactions, calculate_pnl, process_and_save_address\n",
@@ -22,7 +23,8 @@
     "END_DATE = \"2025-01-01 08:00\"\n",
     "OUTPUT_FILE = \"C:/Users/YuweiCao/Documents/GitHub/Project/Project/etherscan/result\"\n",
     "API_KEY = \"VQAIR728IM4Z8RZKPYBR4ESM5I3WBZK2C1\"\n",
-    "BASE_TOKENS = {\"USDT\", \"USDC\", \"USDE\"}"
+    "BASE_TOKENS = {\"USDT\", \"USDC\", \"USDE\"}\n",
+    "base_pattern = re.compile('|'.join(BASE_TOKENS))"
    ]
   },
   {
