--- a/etherscan/data_process.ipynb
+++ b/etherscan/data_process.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -3289,7 +3289,9 @@
     "\n",
     "    print(tabulate(pnl_summary_df, headers='keys', tablefmt='grid', showindex=False, floatfmt=\".2f\"))\n",
     "else:\n",
-    "    print(\"No transactions found\")"
+    "    print(\"No transactions found\")\n",
+    "    \n",
+    "    #这个算的不对先别管他"
    ]
   },
   {
