--- a/etherscan/final_results_pnl_address.ipynb
+++ b/etherscan/final_results_pnl_address.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,6 @@
     }
    ],
    "source": [
-    "\n",
     "transfers_df = fetch_and_save_erc20_transfers(\n",
     "        address=ADDRESS,\n",
     "        start_date=START_DATE,\n",
@@ -504,8 +503,7 @@
     "    )\n",
     "transfers_df = pd.read_csv(OUTPUT_FILE + \"/erc20_transfers.csv\")\n",
     "record_df_1, record_df_2, record_df_3 = process_transactions(transfers_df, OUTPUT_FILE, ADDRESS, base_pattern)\n",
-    "# 这里我为了显示简洁把process_transactions中print结果的注释掉了 如果需要可以取消注释\n",
-    "    "
+    "# 这里我为了显示简洁把process_transactions中print结果的注释掉了 如果需要可以取消注释"
    ]
   },
   {
@@ -6650,8 +6648,323 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Columns in DataFrame for ETH: Index(['low', 'updatedAt', 'timestamp', 'open', 'volume', 'high', 'close',\n",
+      "       'instrument'],\n",
+      "      dtype='object')\n",
+      "       low      updatedAt  timestamp     open    volume     high    close  \\\n",
+      "0     2426  1705708745513 2024-01-18  2530.76  18838473  2549.89  2470.97   \n",
+      "1  2415.79  1705795002684 2024-01-19  2468.01  17179104  2505.95  2492.52   \n",
+      "2   2454.1  1705881462962 2024-01-20  2476.23   5103303     2491  2472.32   \n",
+      "3  2451.49  1705967900184 2024-01-21  2466.01   4309880  2482.58  2457.63   \n",
+      "4   2301.5  1706054331364 2024-01-22  2462.39  26475951  2466.99  2314.62   \n",
+      "\n",
+      "                 instrument  \n",
+      "0  ETHUSDT-OKX-00000000-FUT  \n",
+      "1  ETHUSDT-OKX-00000000-FUT  \n",
+      "2  ETHUSDT-OKX-00000000-FUT  \n",
+      "3  ETHUSDT-OKX-00000000-FUT  \n",
+      "4  ETHUSDT-OKX-00000000-FUT  \n",
+      "Columns in DataFrame for TRX: RangeIndex(start=0, stop=0, step=1)\n",
+      "Empty DataFrame\n",
+      "Columns: []\n",
+      "Index: []\n",
+      "No valid data found for TRX. Skipping.\n",
+      "Columns in DataFrame for SOL: Index(['low', 'updatedAt', 'timestamp', 'open', 'volume', 'high', 'close',\n",
+      "       'instrument'],\n",
+      "      dtype='object')\n",
+      "     low      updatedAt  timestamp   open    volume    high  close  \\\n",
+      "0   91.3  1705708534187 2024-01-18    101   8814624  101.54  94.41   \n",
+      "1  87.03  1705795118933 2024-01-19   94.1   9165468   95.46  93.63   \n",
+      "2  90.12  1705881579609 2024-01-20  92.17   4006310    94.3  92.91   \n",
+      "3  90.79  1705967688905 2024-01-21  92.15   2924020      94  91.11   \n",
+      "4  82.02  1706054120125 2024-01-22  91.47  11924135   91.95  83.86   \n",
+      "\n",
+      "                 instrument  \n",
+      "0  SOLUSDT-OKX-00000000-FUT  \n",
+      "1  SOLUSDT-OKX-00000000-FUT  \n",
+      "2  SOLUSDT-OKX-00000000-FUT  \n",
+      "3  SOLUSDT-OKX-00000000-FUT  \n",
+      "4  SOLUSDT-OKX-00000000-FUT  \n",
+      "Columns in DataFrame for BNB: Index(['low', 'updatedAt', 'timestamp', 'open', 'volume', 'high', 'close',\n",
+      "       'instrument'],\n",
+      "      dtype='object')\n",
+      "     low      updatedAt  timestamp   open    volume   high  close  \\\n",
+      "0  305.5  1705708639824 2024-01-18  307.7  18927669    315  312.8   \n",
+      "1  304.7  1705794896924 2024-01-19  309.5  21029647    316  314.3   \n",
+      "2    312  1705881356979 2024-01-20  313.4   8569126  317.4  317.3   \n",
+      "3  316.2  1705967794448 2024-01-21  317.6   7840663  321.7  318.6   \n",
+      "4  303.4  1706054225514 2024-01-22  319.3  16417138  319.8  305.9   \n",
+      "\n",
+      "                 instrument  \n",
+      "0  BNBUSDT-OKX-00000000-FUT  \n",
+      "1  BNBUSDT-OKX-00000000-FUT  \n",
+      "2  BNBUSDT-OKX-00000000-FUT  \n",
+      "3  BNBUSDT-OKX-00000000-FUT  \n",
+      "4  BNBUSDT-OKX-00000000-FUT  \n",
+      "Columns in DataFrame for BASE: RangeIndex(start=0, stop=0, step=1)\n",
+      "Empty DataFrame\n",
+      "Columns: []\n",
+      "Index: []\n",
+      "No valid data found for BASE. Skipping.\n",
+      "Columns in DataFrame for BTC: Index(['low', 'updatedAt', 'timestamp', 'open', 'volume', 'high', 'close',\n",
+      "       'instrument'],\n",
+      "      dtype='object')\n",
+      "       low      updatedAt  timestamp     open    volume   high    close  \\\n",
+      "0    40676  1705708650347 2024-01-18    42674  12915142  42928  41324.8   \n",
+      "1    40244  1705794907483 2024-01-19  41294.4  14934844  42195    41665   \n",
+      "2    41466  1705881367544 2024-01-20  41487.9   3547982  41888  41694.5   \n",
+      "3  41495.6  1705967805051 2024-01-21    41650   3236433  41880  41586.3   \n",
+      "4  39283.5  1706054236078 2024-01-22  41655.9  20673920  41694  39576.1   \n",
+      "\n",
+      "                 instrument  \n",
+      "0  BTCUSDT-OKX-00000000-FUT  \n",
+      "1  BTCUSDT-OKX-00000000-FUT  \n",
+      "2  BTCUSDT-OKX-00000000-FUT  \n",
+      "3  BTCUSDT-OKX-00000000-FUT  \n",
+      "4  BTCUSDT-OKX-00000000-FUT  \n",
+      "Columns in DataFrame for ARB: Index(['low', 'updatedAt', 'timestamp', 'open', 'volume', 'high', 'close',\n",
+      "       'instrument'],\n",
+      "      dtype='object')\n",
+      "      low      updatedAt  timestamp    open    volume    high   close  \\\n",
+      "0   1.907  1709337514445 2024-02-29  1.9849   9460541  2.0959  1.9446   \n",
+      "1  1.9405  1709423987133 2024-03-01  1.9764   4431391  2.0139  1.9893   \n",
+      "2  1.9501  1709510224231 2024-03-02  1.9989   5307069  2.0268  2.0267   \n",
+      "3  1.8044  1709596760522 2024-03-03  2.0991  12997647   2.198  2.0456   \n",
+      "4  1.9201  1709682788112 2024-03-04  2.0324   7721973  2.0458   1.983   \n",
+      "\n",
+      "                 instrument  \n",
+      "0  ARBUSDT-OKX-00000000-FUT  \n",
+      "1  ARBUSDT-OKX-00000000-FUT  \n",
+      "2  ARBUSDT-OKX-00000000-FUT  \n",
+      "3  ARBUSDT-OKX-00000000-FUT  \n",
+      "4  ARBUSDT-OKX-00000000-FUT  \n",
+      "Columns in DataFrame for AVAX: Index(['low', 'updatedAt', 'timestamp', 'open', 'volume', 'high', 'close',\n",
+      "       'instrument'],\n",
+      "      dtype='object')\n",
+      "      low      updatedAt  timestamp    open   volume    high   close  \\\n",
+      "0  32.705  1705708618709 2024-01-18  35.898  2351773  36.042  33.593   \n",
+      "1   31.17  1705794875726 2024-01-19  33.459  2304032   33.75  32.736   \n",
+      "2  32.037  1705881335759 2024-01-20  32.472  1144196  33.014  32.888   \n",
+      "3  32.455  1705967773365 2024-01-21  32.499  1530443   33.57  32.549   \n",
+      "4  29.304  1706054204467 2024-01-22  32.611  3390113   32.73  29.538   \n",
+      "\n",
+      "                  instrument  \n",
+      "0  AVAXUSDT-OKX-00000000-FUT  \n",
+      "1  AVAXUSDT-OKX-00000000-FUT  \n",
+      "2  AVAXUSDT-OKX-00000000-FUT  \n",
+      "3  AVAXUSDT-OKX-00000000-FUT  \n",
+      "4  AVAXUSDT-OKX-00000000-FUT  \n",
+      "Columns in DataFrame for SUI: Index(['low', 'updatedAt', 'timestamp', 'open', 'volume', 'high', 'close',\n",
+      "       'instrument'],\n",
+      "      dtype='object')\n",
+      "      low      updatedAt  timestamp    open     volume    high   close  \\\n",
+      "0  1.1443  1705708544738 2024-01-18   1.315  205568822  1.3482  1.1585   \n",
+      "1  1.0832  1705795129506 2024-01-19  1.1482  152267220   1.191  1.1659   \n",
+      "2  1.0569  1705881590230 2024-01-20   1.138  113211973  1.1563  1.1022   \n",
+      "3  1.0524  1705967699401 2024-01-21  1.0805   84142586  1.1289  1.0609   \n",
+      "4  1.0103  1706054130674 2024-01-22  1.0368  176414851  1.1307  1.0738   \n",
+      "\n",
+      "                 instrument  \n",
+      "0  SUIUSDT-OKX-00000000-FUT  \n",
+      "1  SUIUSDT-OKX-00000000-FUT  \n",
+      "2  SUIUSDT-OKX-00000000-FUT  \n",
+      "3  SUIUSDT-OKX-00000000-FUT  \n",
+      "4  SUIUSDT-OKX-00000000-FUT  \n",
+      "Columns in DataFrame for APT: Index(['low', 'updatedAt', 'timestamp', 'open', 'volume', 'high', 'close',\n",
+      "       'instrument'],\n",
+      "      dtype='object')\n",
+      "      low      updatedAt  timestamp     open    volume     high    close  \\\n",
+      "0  9.3701  1708127789015 2024-02-15   9.6547  11862035   10.799  10.1675   \n",
+      "1  9.5735  1708214209571 2024-02-16  10.1859   5468256  10.3532   9.8084   \n",
+      "2  9.2005  1708300669587 2024-02-17   9.7809   3494246   9.7809   9.6956   \n",
+      "3  9.5101  1708387191551 2024-02-18   9.6373   3154875   9.7986   9.6939   \n",
+      "4  9.7013  1708473402555 2024-02-19   9.8395   5997789  10.2653  10.1241   \n",
+      "\n",
+      "                 instrument  \n",
+      "0  APTUSDT-OKX-00000000-FUT  \n",
+      "1  APTUSDT-OKX-00000000-FUT  \n",
+      "2  APTUSDT-OKX-00000000-FUT  \n",
+      "3  APTUSDT-OKX-00000000-FUT  \n",
+      "4  APTUSDT-OKX-00000000-FUT  \n",
+      "Columns in DataFrame for MATIC: RangeIndex(start=0, stop=0, step=1)\n",
+      "Empty DataFrame\n",
+      "Columns: []\n",
+      "Index: []\n",
+      "No valid data found for MATIC. Skipping.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "import getpass\n",
+    "# find a way to use relative path, so that the function in dynamoUtil can be run in any machine\n",
+    "src_path = r'C:\\Users\\YuweiCao\\Documents\\GitHub\\char-python-common\\src'\n",
+    "\n",
+    "if src_path not in sys.path:\n",
+    "    sys.path.append(src_path)\n",
+    "\n",
+    "USER = getpass.getuser()\n",
+    "REPO_PATH = r'C:\\Users\\YuweiCao\\Documents\\GitHub\\char-python-common'\n",
+    "\n",
+    "sys.path.append(REPO_PATH)\n",
+    "sys.path.append(REPO_PATH + '/src')\n",
+    "\n",
+    "from dynamoUtil import price_bar_query\n",
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "mapping = {\n",
+    "    'ETH': 'ETHUSDT-OKX-00000000-FUT',\n",
+    "    'SOL': 'SOLUSDT-OKX-00000000-FUT',\n",
+    "    'BTC': 'BTCUSDT-OKX-00000000-FUT',\n",
+    "}\n",
+    "\n",
+    "def fetch_price_data(chain_name):\n",
+    "    today = datetime.now().replace(hour=23, minute=0, second=0, microsecond=0)\n",
+    "    start_date = today - timedelta(days=365) # 一年的数据\n",
+    "\n",
+    "    today_str = today.strftime('%Y-%m-%d-%H-%M')\n",
+    "    start_date_str = start_date.strftime('%Y-%m-%d-%H-%M')\n",
+    "    \n",
+    "    instrument_code = mapping.get(chain_name)\n",
+    "\n",
+    "    price_data = price_bar_query(instrument_code + '|1440', start_date_str, today_str, 'live')\n",
+    "    price_df = pd.DataFrame(price_data)\n",
+    "    print(f\"Columns in DataFrame for {chain_name}: {price_df.columns}\") \n",
+    "    print(price_df.head())\n",
+    "    \n",
+    "    if price_df.empty:\n",
+    "        print(f\"No valid data found for {chain_name}. Skipping.\")\n",
+    "        return\n",
+    "\n",
+    "    if 'timestamp' not in price_df.columns or 'close' not in price_df.columns:\n",
+    "        print(f\"Required columns 'timestamp' or 'close' not found in the data for {chain_name}. Skipping.\")\n",
+    "        return\n",
+    "\n",
+    "    selected_columns = price_df[['timestamp', 'close']].copy()\n",
+    "\n",
+    "    # selected_columns['date'] = pd.to_datetime(selected_columns['timestamp']).dt.date\n",
+    "\n",
+    "    selected_columns.rename(columns={'close': 'price'}, inplace=True)\n",
+    "    \n",
+    "    price_folder = r\"C:\\Users\\YuweiCao\\Documents\\GitHub\\Project\\Project\\etherscan\\price\\\\\"\n",
+    "    selected_columns.to_csv(price_folder + f\"{chain_name}_price.csv\", index=False)\n",
+    "    \n",
+    "chain_names = mapping.keys()\n",
+    "for chain_name in chain_names:\n",
+    "    fetch_price_data(chain_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "mapping = {\n",
+    "    'ETH': 'ETHUSDT-OKX-00000000-FUT',\n",
+    "    'SOL': 'SOLUSDT-OKX-00000000-FUT',\n",
+    "    'BTC': 'BTCUSDT-OKX-00000000-FUT',\n",
+    "}\n",
+    "def is_price_within_threshold(instrument, start_time,threshold):\n",
+    "    \"\"\"\n",
+    "    判断最近三天的价格是否在阈值以内\n",
+    "    \"\"\"\n",
+    "    primary_key_value = f\"{instrument}|1\"  # 假设使用 1440 分钟（日线）数据\n",
+    "    end_time = start_time - timedelta(days=1)\n",
+    "    price_data = price_bar_query(primary_key_value, start_time, end_time, env='live')\n",
+    "\n",
+    "    if len(price_data) < 3:\n",
+    "        raise ValueError(f\"价格数据不足三行，无法进行比较。\")\n",
+    "\n",
+    "    prices = price_data['close'].iloc[:3]\n",
+    "\n",
+    "    # 计算价格差异平均值\n",
+    "    diff = np.mean(prices) -\n",
+    "\n",
+    "    # 判断差异是否在阈值以内\n",
+    "    if diff <= threshold:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "def classify_and_calculate_pnl(pnl_summary_df, mapping, price_bar_query, threshold=0.05, start_time=None, end_time=None):\n",
+    "    '''\n",
+    "    将 pnl_summary_df 中的 token 分为两类：主流币和其他币\n",
+    "    '''\n",
+    "    main_coin_results = []\n",
+    "    standalone_results = []\n",
+    "\n",
+    "    for index, row in pnl_summary_df.iterrows():\n",
+    "        token = row[\"token\"]\n",
+    "        price_unit = row[\"price_unit\"]\n",
+    "        total_pnl = row[\"total_pnl\"]\n",
+    "        \n",
+    "        # 判断是否含有中心币\n",
+    "        main_token = None\n",
+    "        for center_coin in mapping.keys():\n",
+    "            if re.search(fr\"\\b{center_coin}\\b\", token, re.IGNORECASE):\n",
+    "                main_token = center_coin\n",
+    "                break\n",
+    "        \n",
+    "        # 如果属于中心币，则判断 price_unit 是否正确\n",
+    "        if main_token:\n",
+    "            # 通过 price_bar_query 获取价格\n",
+    "            instrument = mapping[main_token]\n",
+    "            try:\n",
+    "                # 调用 price_bar_query 获取价格数据\n",
+    "                price_data = price_bar_query(instrument, start_time, end_time)\n",
+    "                if not price_data.empty:\n",
+    "                    # 获取对应的价格\n",
+    "                    actual_price = price_data[\"close\"].iloc[-1]  # 获取最新价格\n",
+    "                    print(f\"Actual price for {main_token}: {actual_price}\")\n",
+    "\n",
+    "                    # 判断 price_unit 是否包含主流币，并比较价格\n",
+    "                    if main_token in price_unit:\n",
+    "                        print(f\"{token} matches {main_token} and price_unit is correct.\")\n",
+    "                        main_coin_results.append({\"token\": main_token, \"price_unit\": price_unit, \"total_pnl\": total_pnl})\n",
+    "                    elif abs(actual_price - 1) <= threshold:  # 假设价格接近 1 表示稳定币\n",
+    "                        print(f\"{token} matches {main_token} and price is within threshold. Adding to main coin results.\")\n",
+    "                        main_coin_results.append({\"token\": main_token, \"price_unit\": price_unit, \"total_pnl\": total_pnl})\n",
+    "                    else:\n",
+    "                        print(f\"{token} matches {main_token} but price or price_unit is incorrect.\")\n",
+    "                        standalone_results.append({\"token\": token, \"price_unit\": price_unit, \"total_pnl\": total_pnl})\n",
+    "                else:\n",
+    "                    print(f\"No price data found for {main_token}. Adding to standalone results.\")\n",
+    "                    standalone_results.append({\"token\": token, \"price_unit\": price_unit, \"total_pnl\": total_pnl})\n",
+    "            except Exception as e:\n",
+    "                print(f\"Error fetching price data for {main_token}: {e}\")\n",
+    "                standalone_results.append({\"token\": token, \"price_unit\": price_unit, \"total_pnl\": total_pnl})\n",
+    "        else:\n",
+    "            print(f\"{token} does not match any main token. Adding to standalone results.\")\n",
+    "            standalone_results.append({\"token\": token, \"price_unit\": price_unit, \"total_pnl\": total_pnl})\n",
+    "\n",
+    "    # 转换结果为 DataFrame\n",
+    "    main_coin_df = pd.DataFrame(main_coin_results)\n",
+    "    standalone_df = pd.DataFrame(standalone_results)\n",
+    "\n",
+    "    # 打印汇总结果\n",
+    "    if not main_coin_df.empty:\n",
+    "        print(\"Main Coin PnL Results:\")\n",
+    "        print(tabulate(main_coin_df, headers='keys', tablefmt='grid', showindex=False, floatfmt=\".2f\"))\n",
+    "    else:\n",
+    "        print(\"No Main Coin PnL Results Found.\")\n",
+    "    \n",
+    "    if not standalone_df.empty:\n",
+    "        print(\"Standalone PnL Results:\")\n",
+    "        print(tabulate(standalone_df, headers='keys', tablefmt='grid', showindex=False, floatfmt=\".2f\"))\n",
+    "    else:\n",
+    "        print(\"No Standalone PnL Results Found.\")\n",
+    "\n",
+    "    return main_coin_df, standalone_df\n"
+   ]
   }
  ],
  "metadata": {
